crypto auth with default role
