# internal/models/user.go
@@ -1,14 +1,36 @@
 package models
 
-import "time"
+import (
+	"html"
+	"strings"
+	"time"
+
+	"golang.org/x/crypto/bcrypt"
+)
 
 type User struct {
-	ID        uint `gorm:"primarykey"`
+	ID        string `gorm:"primarykey"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
-	RoleID    uint   `gorm:"not null;DEFAULT:3" json:"role_id"`
+	RoleID    string `gorm:"not null;DEFAULT:3" json:"role_id"`
 	Username  string `gorm:"size:255;not null;unique" json:"username"`
 	Email     string `gorm:"size:255;not null;unique" json:"email"`
 	Password  string `gorm:"size:255;not null" json:"-"`
 	Role      Role   `gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"-"`
+}
+
+// Validate user password
+func (user *User) ValidateUserPassword(password string) error {
+	return bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(password))
+}
+
+// Generate encrypted password
+func (user *User) BeforeSave() error {
+	passwordHash, err := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
+	if err != nil {
+		return err
+	}
+	user.Password = string(passwordHash)
+	user.Username = html.EscapeString(strings.TrimSpace(user.Username))
+	return nil
 }
